# bds-Sim

./: .gitignore  Cargo.toml  README.md  generate_beidou_info.py  msg.json  requirements.txt
bdsTx/coding/: b1c_ranging_code.py  b1i_bch.py  b1i_ranging_code.py  b3i_ranging_code.py  bch.py  crc24q.py  gold_code.py  interleaving.py  ldpc.py  ldpc_mat.py  lfsr.py  pre_ldpc.py  weil_code.py
bdsTx/coding/bch_test/: bch_enc.csv
bdsTx/coding/ldpc_mat_gen/: create_ldpc_mat.py  create_ldpc_meta_data.py  gen_matG.sage  gen_matG2.sage  ldpc_matG_100_200.json  ldpc_matG_44_88.json  ldpc_mat_100_200.json  ldpc_mat_44_88.json  ldpc_mat_ele_100_200.txt  ldpc_mat_ele_44_88.txt  ldpc_mat_idx_100_200.txt  ldpc_mat_idx_44_88.txt  ldpc_mat_meta_data_100_200.json  ldpc_mat_meta_data_44_88.json
bdsTx/coding/prn_data/: b1c_prn_data.json  b1i_phase_info.json  b1icode.csv  b3i_data.txt  b3i_phase_data.json  b3icode.csv  process_copied_data.py  process_copied_data_b1c.py  (+2 more)
bdsTx/frame/: util.py
bdsTx/handlers/: alc_reader.py  base_object.py  eph_reader.py  iono_corr_loader.py  ipc_sink.py  ldpc_loader.py  msg.json  msg_generator.py  pseudorange_calc.py  ranging_code_loader.py  sat_selector.py  satellite_handler.py  satellite_queue_handler.py
bdsTx/satellite_handler/: b1c_satellite.py
bdsTx/satellite_info/: broadcast_type.py  constants.py  convert_almanac_to_json.py  convert_ephemeris_to_json.py  coordinate_system.py  detect_sat_type.py  eccentric_anomaly.py  ionosphere_corr.py  ionosphere_corr_bdgim.py  ionosphere_corr_klobuchar.py  position_calculate_by_almanac.py  position_calculate_by_ephemeris.py  pseudorange.py  time_system.py  visible_satellite_searcher.py
flowchart_poc/: b1c_test.grc  b1c_test.py  b1i-bpsk.grc  bpsk_tx.grc  hier_b1c_boc.grc  hier_b1c_hexdata2vec.grc  hier_b1c_oct2vec.grc  hier_b1c_oct2vec_carrier.grc  modulation-randominput.grc
signalProcess/: CMakeLists.txt
signalProcess/bpsk/: b1imain.cpp  b1isim.cpp  b1isim.hpp  bpsk_main.cpp  bpsk_main.hpp  main.cpp
signalProcess/common/: base_types.py
signalProcess/signal_source/: sine_wave.py  square_wave.py
signalProcess/util/: constants.hpp  constellation.py  dataSource.cpp  dataSource.hpp  data_util.py  operator.py  satInfo.cpp  satInfo.hpp
singlePointPosition/: load_range.py  single_point_position.py
src/: b1igen.rs  carr_phase.rs  constants.rs  lib.rs  main.rs  satellite_loader.rs
tools/: README.md
tools/gnss-sdr-configs/: gnss-sdr-b1i-localfile.conf  gnss-sdr-b1i.conf
(+218 files in other folders)
